actually send back the users
